# OpenCVSamples

./: CMakeLists.txt
src/: ccapture.cpp  fdetection.cpp
